[gd_scene load_steps=3 format=2]

[ext_resource path="res://Menus/immortal.tres" type="DynamicFont" id=1]
[ext_resource path="res://Menus/WorldMenu.gd" type="Script" id=2]

[node name="WorldMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ReturnButton" type="Button" parent="VBoxContainer"]
margin_right = 460.0
margin_bottom = 24.0
custom_fonts/font = ExtResource( 1 )
text = " Return"
flat = true
align = 0

[node name="Label" type="Label" parent="VBoxContainer"]
margin_top = 28.0
margin_right = 460.0
margin_bottom = 46.0
custom_fonts/font = ExtResource( 1 )
text = "Select or Create a World"

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
margin_top = 50.0
margin_right = 460.0
margin_bottom = 54.0

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
margin_top = 58.0
margin_right = 460.0
margin_bottom = 210.0
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/ScrollContainer"]
margin_bottom = 152.0
grow_horizontal = 2
size_flags_vertical = 3

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
margin_top = 214.0
margin_right = 460.0
margin_bottom = 218.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 222.0
margin_right = 460.0
margin_bottom = 250.0

[node name="WorldName" type="LineEdit" parent="VBoxContainer/HBoxContainer"]
margin_right = 140.0
margin_bottom = 28.0
rect_min_size = Vector2( 140, 0 )
custom_fonts/font = ExtResource( 1 )
align = 1
placeholder_text = "World Name"

[node name="Seed" type="LineEdit" parent="VBoxContainer/HBoxContainer"]
margin_left = 144.0
margin_right = 238.0
margin_bottom = 28.0
custom_fonts/font = ExtResource( 1 )
align = 1
placeholder_text = "Seed"

[node name="CreateButton" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 242.0
margin_right = 296.0
margin_bottom = 28.0
custom_fonts/font = ExtResource( 1 )
text = "Create"
flat = true
align = 0

[connection signal="focus_entered" from="VBoxContainer/ReturnButton" to="." method="_on_ReturnButton_focus_entered"]
[connection signal="mouse_entered" from="VBoxContainer/ReturnButton" to="." method="_on_ReturnButton_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/ReturnButton" to="." method="_on_ReturnButton_pressed"]
[connection signal="focus_entered" from="VBoxContainer/HBoxContainer/CreateButton" to="." method="_on_CreateButton_focus_entered"]
[connection signal="mouse_entered" from="VBoxContainer/HBoxContainer/CreateButton" to="." method="_on_CreateButton_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/CreateButton" to="." method="_on_CreateButton_pressed"]
